# llm-extractor

./: .gitignore  README.md  api.py  extract_cli.py  pyproject.toml
src/extractor/: __init__.py  engine.py  schema.py
src/extractor/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock_provider.py  openai_provider.py
tests/: test_api.py  test_cli.py  test_extractor.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
