[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-extractor"
version = "1.0.0"
description = "Reliable structured extraction from LLMs, across multiple providers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
# Core needs only pydantic. Each provider's SDK is an optional extra so you only
# install the one you use.
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.7"]
all = ["anthropic>=0.40", "openai>=1.0", "google-generativeai>=0.7"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=7.4"]

[project.scripts]
llm-extract = "extract_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
